<resources>
    <string name="app_name">Hub TV</string>
    <string name="hub_tv">Hub TV</string>
    <string name="newly_added">Newly Added</string>
    <string name="featured">Featured</string>
    <string name="traditional">Traditional</string>
    <string name="drama">Drama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_now">Play Now</string>
</resources>